adjusted name sorter style

--- a/src/components/author-name-sorter/_author-name-sorter.scss
+++ b/src/components/author-name-sorter/_author-name-sorter.scss
@@ -1,2 +1,11 @@
 .author-name-sorter {
+	.arthor-name-input-text-area {
+		height: 250px;
+		resize: none;
+	}
+	.output-text-area {
+		@extend .arthor-name-input-text-area;
+		border: none;
+		cursor: inherit;
+	}
 }
